Bug 402355 - Music player crashes after click on title or album of the currently playing song
Summary: Music player crashes after click on title or album of the currently playing song
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.12.0
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-19 17:55 UTC by tywigi
Modified: 2019-02-19 07:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12.3
Sentry Crash Report:


Attachments
attachment-30407-0.html (1.39 KB, text/html)
2019-01-28 11:44 UTC, tywigi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tywigi 2018-12-19 17:55:51 UTC
SUMMARY


STEPS TO REPRODUCE
1. open the Juke music player
2. Play any song.
3. Click/select the song title or album name of the playing song.

OBSERVED RESULT Music player force closes immediately after.


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 tywigi 2019-01-28 11:44:19 UTC
Created attachment 117698 [details]
attachment-30407-0.html

After running the player in the terminal the output error is "[1]    16915
segmentation fault (core dumped)  juk"


On Tue, Jan 8, 2019 at 11:16 PM Christoph Feck <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=402355
>
> Christoph Feck <cfeck@kde.org> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>             Summary|Music player chrases after  |Music player crashes after
>                    |cleck on title or album of  |click on title or album of
>                    |the currently playing song. |the currently playing song
>            Severity|minor                       |crash
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 2 Michael D 2019-01-29 11:53:29 UTC
Can reproduce on Manjaro, juk 18.12.1. However, juk doesn't "close immediately". Rather it unresponsively continues playing music while consuming an entire core of my CPU until I force close it.
Comment 3 Michael Pyne 2019-02-19 00:14:57 UTC
I've been able to reproduce, but still need to narrow down the bug and come up with a fix.
Comment 4 Michael Pyne 2019-02-19 00:40:48 UTC
Git commit 5c1470d2f7f4b3f8ba73644fbfa2206bc22063dd by Michael Pyne.
Committed on 19/02/2019 at 00:34.
Pushed by mpyne into branch 'Applications/18.12'.

Fix crash in filtering playlist to playing album/artist.

This was caused by infinite recursion in trying to grab the list of
playlist items while trying to update the list of playlist items, which
could be most easily caused by clicking on the artist or album link in
the "now playing" bar while playing a song.
FIXED-IN:18.12.3

M  +2    -1    playlist.cpp

https://invent.kde.org/kde/juk/commit/5c1470d2f7f4b3f8ba73644fbfa2206bc22063dd
Comment 5 Michael D 2019-02-19 07:59:11 UTC
Thanks for the fix!