Fix crash in filtering playlist to playing album/artist.

This was caused by infinite recursion in trying to grab the list of
playlist items while trying to update the list of playlist items, which
could be most easily caused by clicking on the artist or album link in
the "now playing" bar while playing a song.

BUG:402355
FIXED-IN:18.12.3